--- a/app_eyepetizer/src/main/res/layout/content_main.xml
+++ b/app_eyepetizer/src/main/res/layout/content_main.xml
@@ -13,8 +13,10 @@
     tools:context="com.yong.eyepetizer.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:onClick="reqData"
+        android:text="请求"/>
+
 </RelativeLayout>
